--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - USER_AGREEMENT=yes
     networks:
-      - doton-local-network_default
+      - default
     ports:
       - "80:80"
 
@@ -18,11 +18,7 @@ services:
     container_name: doton-sub-chain
     command: doton-substrate-chain --dev --ws-external --rpc-external --prometheus-external
     networks:
-      - doton-local-network_default
+      - default
     ports:
       - "9944:9944"
       - "9615:9615"
-
-networks:
-  doton-local-network_default:
-    external: true
